feat: add columns over 900px

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
-  <div id="main">
+  <div id="main" class="flex-box">
     <!--
     Everything from here to the <script> tag below is the skeleton of your
     website. Your code will add information to each of the sections of the
@@ -62,10 +62,10 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
       <ul id="topContacts" class="flex-box"></ul>
     </div>
     <div style="clear: both;"></div>
-    <div id="workExperience" class="gray">
+    <div id="workExperience">
       <h2>Work Experience</h2>
     </div>
-    <div id="projects">
+    <div id="projects" class=flex-box>
       <h2>Projects</h2>
     </div>
     <div id="education" class="gray">
