--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     <div id="workExperience">
       <h2>Work Experience</h2>
     </div>
-    <div id="projects" class=flex-box>
+    <div id="projects" class="flexbox">
       <h2>Projects</h2>
     </div>
     <div id="education" class="gray">
