fix: tidy code and comment

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-index.html file based on Udacity course material https://www.udacity.com/course/javascript-basics--ud804
+index.html file based on Udacity course material https://www.udacity.com/course/javascript%2Dbasics%2D%2Dud804
 -->
 <head>
   <meta charset="utf-8">
