feat: add portfolio link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ index.html file based on Udacity course material https://www.udacity.com/course/
     </footer>
   </main>
 
-  <script src="js/resumeBuilder.js"></script>
+  <script src="js/resumeBuilder.js?v=20160213"></script>
 
   <script type="text/javascript">
     if(document.getElementsByClassName('flex-item').length === 0) {
