fix: add helper.js link version

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ index.html file based on Udacity course material https://www.udacity.com/course/
   <title>Resume</title>
 
   <script src="js/jQuery.js"></script>
-  <script src="js/helper.js"></script>
+  <script src="js/helper.js?v=20160213"></script>
 
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="bower_components/google-feeds/google-feeds.html">
