--- a/index.html
+++ b/index.html
@@ -2,73 +2,73 @@
 <!--
 index.html file based on Udacity course material https://www.udacity.com/course/javascript%2Dbasics%2D%2Dud804
 -->
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Resume</title>
-
-  <script src="js/jQuery.js"></script>
-
-  <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-  <link rel="import" href="bower_components/google-feeds/google-feeds.html">
-  <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-
-  <link rel="stylesheet" href="http://normalize-css.googlecode.com/svn/trunk/normalize.css">
-  <link rel="stylesheet" href="css/style.css" >
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume</title>
+    <script src="js/jQuery.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+    <link rel="import" href="bower_components/google-feeds/google-feeds.html">
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAxMgzvTLtEzJUMV4JjYDFAnVCXHqvnnwI&libraries=places"></script>
+    <link rel="stylesheet" href="http://normalize-css.googlecode.com/svn/trunk/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  <main id="main" class="flex-box">
-    <header id="header" class="center-content clear-fix">
-      <ul id="topContacts" class="flex-box"></ul>
-    </header>
-    <div style="clear: both;"></div>
-
-    <section id="workExperience">
-      <h2>Work Experience</h2>
-    </section>
-
-    <section id="projects" class="flexbox">
-      <h2>Projects</h2>
-    </section>
-
-    <section id="education" class="gray">
-      <h2>Education</h2>
-    </section>
-
-    <div id="interactive">
-      <section id="mapDiv">
-        <h2>Where I've Lived and Worked</h2>
-      </section>
-
-      <section id="githubFeed">
-        <div id="githubFeedHeader">
-          <h2>GitHub Activity Feed</h2>
-          <template is="dom-bind">
-            <google-feeds feed="https://github.com/rogyw.atom" results="{{result}}" count="5"></google-feeds>
-            <p>Feed: <a href="{{result.link}}">{{result.title}}</a></p>
-          </template>
+    <main id="main" class="flex-box">
+        <header id="header" class="center-content clear-fix">
+            <ul id="topContacts" class="flex-box"></ul>
+        </header>
+        <div style="clear: both;"></div>
+        <section id="workExperience">
+            <h2>Work Experience</h2>
+        </section>
+        <section id="projects" class="flexbox">
+            <h2>Projects</h2>
+        </section>
+        <section id="education" class="gray">
+            <h2>Education</h2>
+        </section>
+        <div id="interactive">
+            <section id="mapDiv">
+                <h2>Where I've Lived and Worked</h2>
+            </section>
+            <section id="githubFeed">
+                <div id="githubFeedHeader">
+                    <h2>GitHub Activity Feed</h2>
+                    <template is="dom-bind">
+                        <google-feeds feed="https://github.com/rogyw.atom" results="{{result}}" count="5"></google-feeds>
+                        <p>Feed: <a href="{{result.link}}">{{result.title}}</a></p>
+                    </template>
+                </div>
+                <div id="githubFeedContent">
+                </div>
+            </section>
         </div>
-        <div id="githubFeedContent">
-        </div>
-      </section>
-    </div>
-    <div style="clear: both;"></div>
-    <footer id="lets-connect" class="dark-gray">
-      <h2 class="orange center-text">Let's Connect</h2>
-      <ul id="footerContacts" class="flex-box"></ul>
-    </footer>
-  </main>
-
-  <script src="js/resumeBuilder.js?v=20160505"></script>
-
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        <div style="clear: both;"></div>
+        <footer id="lets-connect" class="dark-gray">
+            <h2 class="orange center-text">Let's Connect</h2>
+            <ul id="footerContacts" class="flex-box"></ul>
+        </footer>
+    </main>
+    <script src="js/resumeBuilder.js?v=20160505"></script>
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-67899143-1', 'auto');
     ga('send', 'pageview');
-  </script>
+    </script>
 </body>
+
 </html>
