fix: update and rebuild for new hosting on okrogerthat.nz

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@ index.html file based on Udacity course material https://www.udacity.com/course/
     <script src="js/jQuery.js"></script>
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="import" href="bower_components/google-feeds/google-feeds.html">
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAxMgzvTLtEzJUMV4JjYDFAnVCXHqvnnwI&libraries=places"></script>
-    <link rel="stylesheet" href="http://normalize-css.googlecode.com/svn/trunk/normalize.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxMgzvTLtEzJUMV4JjYDFAnVCXHqvnnwI&libraries=places"></script>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -54,21 +54,15 @@ index.html file based on Udacity course material https://www.udacity.com/course/
     </main>
     <script src="js/resumeBuilder.js?v=20160507"></script>
     <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-67899143-1', 'auto');
-    ga('send', 'pageview');
-    </script>
+  ga('create', 'UA-86432125-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 
 </html>
