--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@ index.html file based on Udacity course material https://www.udacity.com/course/
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
-    <script src="js/jQuery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="import" href="bower_components/google-feeds/google-feeds.html">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxMgzvTLtEzJUMV4JjYDFAnVCXHqvnnwI&libraries=places"></script>
@@ -52,7 +54,7 @@ index.html file based on Udacity course material https://www.udacity.com/course/
             <ul id="footerContacts" class="flex-box"></ul>
         </footer>
     </main>
-    <script src="js/resumeBuilder.js?v=20160507"></script>
+    <script src="js/scripts.js"></script>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
