fix: add version to html js file scripts

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@ index.html file based on Udacity course material https://www.udacity.com/course/
     <link rel="import" href="bower_components/google-feeds/google-feeds.html">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3IYdjwekchcEnCTNo9oLUCxNHXZFaPcg&libraries=places"></script>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=20161120">
 </head>
 
 <body>
@@ -54,7 +54,7 @@ index.html file based on Udacity course material https://www.udacity.com/course/
             <ul id="footerContacts" class="flex-box"></ul>
         </footer>
     </main>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.js?v=20161120"></script>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
